// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ibBTC Mint can apply max balance 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 WithStyles(ForwardRef(Grid))-root-105 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        5.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-137 WithStyles(ForwardRef(Grid))-root-138 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-5-54"
      >
        <div
          class="MuiInputBase-root-140 WithStyles(ForwardRef(InputBase))-root-139 MuiInputBase-disabled-143"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-151 MuiInputBase-disabled-143"
            disabled=""
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            type="text"
            value="5.000000"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-158 WithStyles(ForwardRef(Grid))-root-159 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-7-56"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-189 MuiButton-root-160 MuiButton-outlined-165 MuiButton-outlinedSizeSmall-177 MuiButton-sizeSmall-181"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-161"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-229"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-189 MuiButton-root-160 MuiButton-outlined-165 makeStyles-selectButton-197 MuiButton-outlinedSizeSmall-177 MuiButton-sizeSmall-181"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-161"
            >
              <div
                style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
              >
                <img
                  alt="Badger crvRenWSBTC"
                  src="/assets/icons/bcrvrenwsbtc.svg"
                  style="height: 2rem; margin-right: .2rem; display: block;"
                />
                <div
                  class="MuiTypography-root-107 MuiTypography-body1-109"
                >
                  bcrvRenWSBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-185 MuiButton-iconSizeSmall-186"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-199"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-229"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-grid-xs-12-47"
  >
    <svg
      class="makeStyles-arrowDown-208"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-209 WithStyles(ForwardRef(Typography))-root-210 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        10.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-211 WithStyles(ForwardRef(Grid))-root-212 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-9-58 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-10-87"
      >
        <h1
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-213 WithStyles(ForwardRef(Typography))-root-214 MuiTypography-h1-112"
        >
          0.000000
        </h1>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-215 WithStyles(ForwardRef(Grid))-root-216 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-3-52 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-2-79"
      >
        <div
          style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
        >
          <img
            alt="Interest-Bearing BTC"
            src="/assets/icons/ibbtc.svg"
            style="height: 2rem; margin-right: .2rem; display: block;"
          />
          <div
            class="MuiTypography-root-107 MuiTypography-body1-109"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-217"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-container-2"
      >
        <h6
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-240 MuiTypography-subtitle1-118"
        >
          <span>
            Your current mint amount limit is 
          </span>
          <span
            class="makeStyles-userLimit-239"
            title="Apply amount"
          >
            0.005000e-6 
          </span>
          <span>
            bcrvRenWSBTC.
          </span>
        </h6>
        <h6
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-240 MuiTypography-subtitle1-118"
        >
          Individual total mint amount limit is currently 0.000000 bcrvRenWSBTC.
        </h6>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            1 
            bcrvRenWSBTC
             : 
            0.000000
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.000000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            0.000000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <button
      class="MuiButtonBase-root-189 MuiButton-root-160 MuiButton-contained-168 MuiButton-containedPrimary-169 MuiButton-containedSizeLarge-180 MuiButton-sizeLarge-182 MuiButton-fullWidth-183"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-161"
      >
        Connect Wallet
      </span>
      <span
        class="MuiTouchRipple-root-229"
      />
    </button>
  </div>
</div>
`;

exports[`ibBTC Mint displays output ibBTC when mint amount is inputted 1`] = `
<div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-104 WithStyles(ForwardRef(Grid))-root-105 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        5.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-137 WithStyles(ForwardRef(Grid))-root-138 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-5-54"
      >
        <div
          class="MuiInputBase-root-140 WithStyles(ForwardRef(InputBase))-root-139 MuiInputBase-disabled-143"
        >
          <input
            autocomplete="off"
            class="MuiInputBase-input-151 MuiInputBase-disabled-143"
            disabled=""
            inputmode="decimal"
            maxlength="79"
            minlength="1"
            pattern="^[0-9]*[.,]?[0-9]*$"
            placeholder="0.000"
            spellcheck="false"
            type="text"
            value="12"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-158 WithStyles(ForwardRef(Grid))-root-159 MuiGrid-container-2 MuiGrid-spacing-xs-1-24 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-7-56"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-189 MuiButton-root-160 MuiButton-outlined-165 MuiButton-outlinedSizeSmall-177 MuiButton-sizeSmall-181"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-161"
            >
              max
            </span>
            <span
              class="MuiTouchRipple-root-229"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3"
        >
          <button
            class="MuiButtonBase-root-189 MuiButton-root-160 MuiButton-outlined-165 makeStyles-selectButton-197 MuiButton-outlinedSizeSmall-177 MuiButton-sizeSmall-181"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-161"
            >
              <div
                style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
              >
                <img
                  alt="Badger crvRenWSBTC"
                  src="/assets/icons/bcrvrenwsbtc.svg"
                  style="height: 2rem; margin-right: .2rem; display: block;"
                />
                <div
                  class="MuiTypography-root-107 MuiTypography-body1-109"
                >
                  bcrvRenWSBTC
                </div>
              </div>
              <span
                class="MuiButton-endIcon-185 MuiButton-iconSizeSmall-186"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-199"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="MuiTouchRipple-root-229"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-align-items-xs-center-10 MuiGrid-grid-xs-12-47"
  >
    <svg
      class="makeStyles-arrowDown-208"
      fill="none"
      height="18"
      viewBox="0 0 13 18"
      width="13"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M6.5 15.2138L11.6295 10L13 11.3931L6.5 18L-6.08938e-08 11.3931L1.37054 10L6.5 15.2138Z"
        fill="white"
        fill-rule="evenodd"
      />
      <line
        stroke="white"
        stroke-width="2"
        x1="6.5"
        x2="6.5"
        y1="16"
        y2="4.37114e-08"
      />
    </svg>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-container-2"
  >
    <div
      class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <p
        class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-209 WithStyles(ForwardRef(Typography))-root-210 MuiTypography-body1-109 MuiTypography-colorTextSecondary-133"
      >
        Balance: 
        10.000
      </p>
    </div>
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-211 WithStyles(ForwardRef(Grid))-root-212 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-9-58 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-10-87"
      >
        <h1
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-213 WithStyles(ForwardRef(Typography))-root-214 MuiTypography-h1-112"
        >
          11.988000
        </h1>
      </div>
      <div
        class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-215 WithStyles(ForwardRef(Grid))-root-216 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-grid-xs-12-47 MuiGrid-grid-sm-3-52 MuiGrid-grid-md-12-75 MuiGrid-grid-lg-2-79"
      >
        <div
          style="align-items: center; display: flex; flex-wrap: nowrap; overflow: hidden;"
        >
          <img
            alt="Interest-Bearing BTC"
            src="/assets/icons/ibbtc.svg"
            style="height: 2rem; margin-right: .2rem; display: block;"
          />
          <div
            class="MuiTypography-root-107 MuiTypography-body1-109"
          >
            ibBTC
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <div
      class="MuiGrid-root-1 WithStyles(ForwardRef(Grid))-root-217"
    >
      <div
        class="MuiGrid-root-1 MuiGrid-container-2"
      >
        <h6
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-240 MuiTypography-subtitle1-118"
        >
          <span>
            Your current mint amount limit is 
          </span>
          <span
            class="makeStyles-userLimit-239"
            title="Apply amount"
          >
            0.005000e-6 
          </span>
          <span>
            bcrvRenWSBTC.
          </span>
        </h6>
        <h6
          class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-240 MuiTypography-subtitle1-118"
        >
          Individual total mint amount limit is currently 0.000000 bcrvRenWSBTC.
        </h6>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Current Conversion Rate: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            1 
            bcrvRenWSBTC
             : 
            1.000000
             
            ibBTC
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Fees: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            <span
              class=""
              title="Mint Fee: 0%"
            >
              0.012000
               
              ibBTC
            </span>
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-1 MuiGrid-container-2 MuiGrid-item-3 MuiGrid-justify-xs-space-between-21 MuiGrid-grid-xs-12-47"
      >
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <h6
            class="MuiTypography-root-107 MuiTypography-subtitle1-118"
          >
            Total Mint Amount: 
          </h6>
        </div>
        <div
          class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-6-41"
        >
          <p
            class="MuiTypography-root-107 WithStyles(ForwardRef(Typography))-root-106 MuiTypography-body1-109"
          >
            11.988000 ibBTC
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root-1 MuiGrid-item-3 MuiGrid-grid-xs-12-47"
  >
    <button
      class="MuiButtonBase-root-189 MuiButton-root-160 MuiButton-contained-168 MuiButton-containedPrimary-169 MuiButton-containedSizeLarge-180 MuiButton-sizeLarge-182 MuiButton-fullWidth-183"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-161"
      >
        Connect Wallet
      </span>
      <span
        class="MuiTouchRipple-root-229"
      />
    </button>
  </div>
</div>
`;
